--- a/client/src/routes/home/home.css
+++ b/client/src/routes/home/home.css
@@ -1,3 +1,4 @@
+
 .home {
     display: flex;
     align-items: center;
@@ -23,49 +24,34 @@
         text-align: center;
   
         h1 {
-            font-size: 128px;
-            background: linear-gradient(to right, #217bfe, #e55571);
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
+          font-size: 64px;
+          background: linear-gradient(to left, #217bfe, #ffd000);
+          background-clip: text;
+          -webkit-background-clip: text;
+          color: transparent;
 
-            @media (max-width: 768px) {
-                font-size: 48px;
-            }
+          @media (max-width: 768px) {
+              font-size: 48px;
+          }
         }
 
         h2 {
-            font-size: 24px;
-            color: #666;
-            max-width: 400px;
+          font-size: 24px;
+          color: #666;
+          max-width: 400px;
 
-            @media (max-width: 768px) {
-                font-size: 18px;
-                max-width: 300px;
-            }
-        }
-        .signLinks {
-            display: flex;
-            margin: 0px;
-  
-          a {
-            margin: 0px 10px ;
-  
-            padding: 15px 25px;
-            background-color: #217bfe;
-            color: white;
-            border-radius: 20px;
-            font-size: 14px;
-            margin-top: 20px; 
-            &:last-child{
-              background-color: #10284d;
-              color: rgb(5, 145, 209);
-            }
-            &:hover {
-              background-color: white;
-              color: #217bfe;
-            }
+          @media (max-width: 768px) {
+              font-size: 18px;
+              max-width: 300px;
           }
         }
+    }
+    .right {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+
     }
 }
