--- a/client/src/components/MessageList/messageList.css
+++ b/client/src/components/MessageList/messageList.css
@@ -1,8 +1,15 @@
 .messages {
-    width: 47%;
+    /* width: 47%; */
+    width: 768px;
+
     display: flex;
     flex-direction: column;
     gap: 5px;
+    
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        padding: 0 8px;
+    }
 }
 
 .messages p,
@@ -15,6 +22,10 @@
     box-sizing: border-box;
     display: block;
     position: relative;
+    @media screen and (max-width: 768px) {
+        /* padding: 8px 12px; */
+        max-width: 85%;
+    }
 }
 
 .message.user {
