--- a/client/src/components/sidebarToggleButton/sidebarToggleButton.css
+++ b/client/src/components/sidebarToggleButton/sidebarToggleButton.css
@@ -1,3 +1,5 @@
+/* src/components/sidebarToggleButton/sidebarToggleButton.css */
+
 .sidebar-toggle-button {
   padding: 4px 8px;
   background-color:  transparent;
