--- a/client/src/components/ChatInput/ChatInput.css
+++ b/client/src/components/ChatInput/ChatInput.css
@@ -1,6 +1,6 @@
+/* src/components/ChatInput/ChatInput.css */
+
 .formContainer {
-    width: 50%;
-    background-color: #3d3d3a;
     border-radius: 20px;
     margin-bottom: 20px;
     @media screen and (max-width: 768px) {
@@ -8,45 +8,49 @@
     }
 }
 
-.formContainer form {
-    width: 100%;
+form {
+    width: 760px;
     height: 100%;
     display: flex;
     gap: 20px;
     border-radius: 20px;
     padding: 10px 20px;
-    align-items: flex-end;
-}
-
-.formContainer textarea {
-    flex: 1;
-    min-height: 24px;
-    max-height: 150px;
-    padding: 12px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #ececec;
-    resize: none;
-    line-height: 1.5;
-    font-family: inherit;
-    font-size: inherit;
-    overflow-y: auto;
-}
-
-.formContainer button {
-    border-radius: 50%;
-    background-color: #605268;
-    border: none;
-    padding: 10px;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    margin-bottom: 5px;
+    background-color: var(--chat-input-background);;
+    justify-content:center;
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
+    }
+    textarea {
+        color: var(--text-color-main);
+        flex: 1;
+        min-height: 24px;
+        max-height: 150px;
+        padding: 12px;
+        border: none;
+        outline: none;
+        background-color: transparent;
+        resize: none;
+        line-height: 1.5;
+        font-family: inherit;
+        font-size: inherit;
+        overflow-y: auto;
+    }
+    button {
+        border-radius: 50%;
+        background-color: var(--avatar-background);
+        border: none;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        margin-bottom: 5px;
+    }
+    button img {
+        width: 16px;
+        height: 16px;
+    }
 }
 
-.formContainer button img {
-    width: 16px;
-    height: 16px;
-}
