--- a/client/src/components/chatsList/chatsList.css
+++ b/client/src/components/chatsList/chatsList.css
@@ -1,4 +1,4 @@
-
+/* src/components/chatsList/chatsList.css */
 
 .chatsList{
     display: flex;
@@ -6,45 +6,40 @@
     overflow-y: auto;
     height: 100%;
 
+    scrollbar-width:auto;
+    scrollbar-color: var(--scrollbar-thumb) transparent;
 
-        scrollbar-width:auto;
-        scrollbar-color: #888 transparent;
+    /* Webkit scrollbar styling */
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
 
-        /* Webkit scrollbar styling */
-        &::-webkit-scrollbar {
-            width: 8px;
-        }
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
 
-        &::-webkit-scrollbar-track {
-            background: transparent;
-        }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb);
+        border-radius: 4px;
+    }
 
-        &::-webkit-scrollbar-thumb {
-            background-color: #888;
-            border-radius: 4px;
-        }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--scrollbar-thumb-hover);
+    }
 
-        &::-webkit-scrollbar-thumb:hover {
-            background-color: #555;
-        }
-
-        -ms-overflow-style: none;
-
+    -ms-overflow-style: none;
 
     a {
         padding: 10px;
         border-radius: 10px;
         text-decoration: none;
-        color: inherit;
+        color: var(--text-color-main);
     
         &:hover {
-          background-color: #5c5a4f;
+          background-color: var(--chat-list-item-active);
         }
         &.active {
-          background-color: #44433c;
-        /* 
-        e: 44433c
-        5c5a4f:  */
+          background-color: var(--user-button-background);
         }
       }
 }
